# tarn

./: AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
assets/: _gen.py
docs/: INDEX.md
evals/: README.md  baseline.json  run.py
evals/corpus/js/: basic.expected.json  basic.ts  hard.expected.json  hard.tsx
evals/corpus/python/: basic.expected.json  basic.py  hard.expected.json  hard.py
evals/corpus/rust/: basic.expected.json  basic.rs  hard.expected.json  hard.rs
packaging/: tarn.rb
src/: editor.rs  envfile.rs  help.rs  json.rs  main.rs  mcp.rs  patch.rs  regex.rs  render.rs  structure.rs  terminal.rs  textfile.rs  toml.rs  yaml.rs
whitepaper/: README.md  render.sh  tarn-whitepaper.html
