[package]
name = "tarn"
version = "0.1.0"
edition = "2021"
authors = ["David Borgenvik"]
description = "A tiny, zero-dependency terminal editor and structural CLI toolkit for AI agents: navigate, search, edit, and patch code with exact line numbers and meaningful exit codes."
license = "MIT"
repository = "https://github.com/OneMuppet/tarn"
homepage = "https://github.com/OneMuppet/tarn"
readme = "README.md"
keywords = ["cli", "editor", "agents", "grep", "diff"]
categories = ["command-line-utilities", "text-editors", "development-tools"]
exclude = ["assets/_gen.py", ".github/"]

# Zero dependencies on purpose. std only; raw mode is done by shelling out to
# `stty`, which is always present. This is the deliberate "small + readable" choice.
[dependencies]

[profile.release]
opt-level = 3
lto = true
strip = true
# NOTE: deliberately NOT setting panic = "abort". The RawMode Drop guard must run
# on panic so the terminal is always restored to a sane state.
